# simple_vcpkg_library

./: CMakeLists.txt  README.md
LibB/: CMakeLists.txt
LibB/Include/: MathLibrary.h
LibB/src/: MathLibrary.cpp
